# MapOSCAL

./: .gitignore  CNAME  README.md  SECURITY.md  _config.yml  env.example  index.md  maposcal.md  pyproject.toml  requirements.txt  sample_control_config copy.yaml  sample_control_config.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
.oscalgen/: SC-8_oscal_component.json  index.faiss  meta.json  summary_index.faiss  summary_meta.json
_posts/: 2025-07-08-welcome.md  2025-07-12-systems-architecture-documentation.md
examples/: FedRAMP_rev5_HIGH-baseline_profile.json  custom_maposcal_profile.json  min_baseline.json  test_baseline copy.json
maposcal/: __init__.py  cli.py  settings.py
maposcal/analyzer/: analyzer.py  chunker.py  parser.py  rules.py
maposcal/embeddings/: faiss_index.py  local_embedder.py  meta_store.py
maposcal/generator/: control_mapper.py  profile_control_extractor.py  validation.py
maposcal/inspectors/: README.md  inspect_lang_golang.py  inspect_lang_python.py
maposcal/llm/: llm_handler.py  prompt_templates.py
maposcal/utils/: README_control_hints_enumerator.md  control_hints.py  control_hints_enumerator.py  logging_config.py  metadata.py  sample_control_hints.py  utilities.py
tests/: conftest.py  test_cli.py  test_inspectors.py
tests/analyzer/: test_analyzer.py
tests/embeddings/: test_embeddings.py  test_local_embedder.py  test_meta_store.py
tests/generator/: test_control_mapper.py  test_profile_control_extractor.py  test_validation.py
tests/integration/: test_template_based_generation.py
(+3 files in other folders)
