[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maposcal"
version = "0.1.0"
description = "CLI tool to generate OSCAL component definitions from source code."
dependencies = ["typer[all]", "faiss-cpu", "openai", "PyYAML", "sentence-transformers", "dotenv", "tiktoken", "toml"]

[project.scripts]
maposcal = "maposcal.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pytest-cov>=4.1.0"
]

[tool.setuptools.packages.find]
include = ["maposcal*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
